welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: not found: value baissebrosse
baissebrosse();
^Program:3: error: not found: value levebrosse
levebrosse();
^Program:5: error: not found: value baissebrosse
baissebrosse();
^Program:6: error: not found: value levebrosse
levebrosse();
^Program:8: error: not found: value baissebrosse
baissebrosse();
^Program:9: error: not found: value levebrosse
levebrosse();
^Program:11: error: not found: value baissebrosse
baissebrosse();
^Program:12: error: not found: value levebrosse
levebrosse();
^Program:14: error: not found: value baissebrosse
baissebrosse();
^Program:15: error: not found: value levebrosse
levebrosse();
^Program:17: error: not found: value baissebrosse
baissebrosse();
^