welcome.lessons.welcome.instructions.Instructions.scala.code
baissebrosse();
levebrosse();
avance();
baissebrosse();
levebrosse();
avance();
baissebrosse();
levebrosse();
droite();
baissebrosse();
levebrosse();
droite();
baissebrosse();
levebrosse();
recule();
baissebrosse();


